# woodpantry-ingestion

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml  ci.yaml
app/: config.py  main.py
app/api/: twilio.py
app/clients/: dictionary.py  pantry.py  recipes.py
app/events/: publisher.py  subscriber.py
app/llm/: openai.py
app/prompts/: pantry.py  recipe.py
app/workers/: job_registry.py  pantry_ingest.py  recipe_ingest.py
kubernetes/: deployment.yaml  service.yaml
tests/: conftest.py  test_clients.py  test_job_registry.py  test_llm.py  test_models.py  test_publisher.py  test_twilio.py  test_workers.py
